--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>eBOLEX | Tu Entrada a una Mejor Experiencia</title>
 
   <!-- Open Graph -->
-<meta property="og:title" content="eBOLEX | Más que boletería. Una experiencia completa para eventos." />
+<meta property="og:title" content="eBOLEX | Más que boletería. Tu entrada a una mejor experiencia." />
 <meta property="og:description" content="Boletería digital, pagos cashless y control total en una sola plataforma." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.ebolex.com/" />
@@ -444,3 +444,4 @@
   </script>
 </body>
 </html>
+
