--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="es">
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LWXQ7RY9XF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LWXQ7RY9XF');
+</script>
+	
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="eBOLEX: boletería digital, wallet BOLEX y pagos cashless para eventos. Control total para organizadores y mejor experiencia para asistentes." />
@@ -444,4 +455,5 @@
   </script>
 </body>
 </html>
+
 
