--- a/index.html
+++ b/index.html
@@ -431,27 +431,27 @@
 
   <!-- Redes sociales (reemplaza los href por tus URLs reales) -->
   <div class="footer__social" aria-label="Redes sociales eBOLEX">
-    <a class="social" href="https://instagram.com/ebolex" target="_blank" rel="noopener" aria-label="Instagram">
+    <a class="social" href="https://instagram.com/ebolexapp" target="_blank" rel="noopener" aria-label="Instagram">
       <!-- Instagram -->
       <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7Zm5 4.5A5.5 5.5 0 1 1 6.5 14 5.5 5.5 0 0 1 12 8.5Zm0 2A3.5 3.5 0 1 0 15.5 14 3.5 3.5 0 0 0 12 10.5Zm6.2-2.4a1.1 1.1 0 1 1-1.1-1.1 1.1 1.1 0 0 1 1.1 1.1Z"/></svg>
     </a>
 
-    <a class="social" href="https://facebook.com/ebolex" target="_blank" rel="noopener" aria-label="Facebook">
+    <a class="social" href="#" target="_blank" rel="noopener" aria-label="Facebook">
       <!-- Facebook -->
       <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M13.5 22v-8h2.7l.4-3H13.5V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.3 0-1.5-.1-2.8-.1-2.8 0-4.7 1.7-4.7 4.8V11H6.7v3h2.6v8h4.2Z"/></svg>
     </a>
 
-    <a class="social" href="https://tiktok.com/@ebolex" target="_blank" rel="noopener" aria-label="TikTok">
+    <a class="social" href="https://tiktok.com/@ebolexapp" target="_blank" rel="noopener" aria-label="TikTok">
       <!-- TikTok -->
       <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M14 3c.6 2.8 2.4 4.7 5 5v3.2c-1.9.1-3.6-.5-5-1.7V16a6 6 0 1 1-6-6c.4 0 .8 0 1.2.1v3.4c-.4-.2-.8-.3-1.2-.3a2.6 2.6 0 1 0 2.6 2.6V3h3.4Z"/></svg>
     </a>
 
-    <a class="social" href="https://www.threads.net/@ebolex" target="_blank" rel="noopener" aria-label="Threads">
+    <a class="social" href="https://www.threads.net/@ebolexapp" target="_blank" rel="noopener" aria-label="Threads">
       <!-- Threads (simple @ icon style) -->
       <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a10 10 0 1 0 10 10A10.01 10.01 0 0 0 12 2Zm.1 5.2c1.8 0 3.3.7 4.3 1.8l-1.5 1.1c-.6-.7-1.5-1.1-2.8-1.1-1.5 0-2.6.7-2.6 1.8 0 1.2 1.3 1.6 3 1.9 2.3.5 4.6 1.1 4.6 4 0 2.4-2.2 3.9-5.1 3.9-2.2 0-4-.8-5.2-2.2l1.5-1.2c.8 1 2 1.5 3.7 1.5 1.7 0 3-.7 3-1.8 0-1.2-1.3-1.6-3.2-2-2.2-.5-4.4-1.2-4.4-3.9 0-2.3 2.1-3.8 4.7-3.8Z"/></svg>
     </a>
 
-    <a class="social" href="https://x.com/ebolex" target="_blank" rel="noopener" aria-label="X">
+    <a class="social" href="#" target="_blank" rel="noopener" aria-label="X">
       <!-- X -->
       <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.9 2H22l-6.8 7.8L23 22h-6.2l-4.9-6.4L6.3 22H2l7.4-8.5L1 2h6.3l4.4 5.8L18.9 2Zm-1.1 18h1.7L7 3.9H5.2l12.6 16.1Z"/></svg>
     </a>
@@ -486,6 +486,7 @@
   </script>
 </body>
 </html>
+
 
 
 
